# kano-git-master-skill

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .kogignore  404.html  AGENTS.md  CNAME  COMMIT_RULES.md  LICENSE  README.html  README.md  SECURITY.md  SKILL.md  TESTING.md  bench_results.csv  cpp-profile-coverage-pgo-model.html  export_skill.sh  functional_test_summary.txt  index.css  index.html  index.xml  msbuild_out.txt  pixi.toml  repo-hygiene.html  run_bench.ps1  run_kano_tests_detached.ps1  setup_benchmark_env.sh  sitemap.xml  test-whitespace.txt
src/cpp/: CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  build_err.txt  cmake_out.txt  msbuild_out.txt  msbuild_out10.txt  msbuild_out11.txt  msbuild_out2.txt  msbuild_out4.txt  msbuild_out5.txt  msbuild_out6.txt  msbuild_out7.txt  msbuild_out8.txt  msbuild_out9.txt  vcpkg.json
src/cpp/apps/kano_git_cli/: main.cpp
src/cpp/code/apps/kano_git_cli/: CMakeLists.txt  main.cpp  package-runtime.cmake  runtime-manifest.json.in
src/cpp/code/apps/kano_git_tui/: CMakeLists.txt  main.cpp
src/cpp/code/apps/unreal/KanoGitGUI/: KanoGitGUI.uproject
src/cpp/code/systems/kano_git_command/: CMakeLists.txt
src/cpp/code/systems/kano_git_command/bridge/: CMakeLists.txt
src/cpp/code/systems/kano_git_command/commit_plan/: CMakeLists.txt
src/cpp/code/systems/kano_git_core/: CMakeLists.txt
src/cpp/code/systems/kano_git_test_core/: CMakeLists.txt
src/cpp/code/tests/: .gitignore  CMakeLists.txt  README.md  SETUP_SUMMARY.md  run_tests.ps1  run_tests.sh
src/cpp/code/tests/e2e/: CMakeLists.txt
src/cpp/code/tests/kano_git_cli_tests/: CMakeLists.txt
src/cpp/code/tests/kano_git_commit_plan_tests/: CMakeLists.txt
src/cpp/code/tests/kano_git_export_tests/: CMakeLists.txt  export_cli_registration_test.cpp  export_helpers_property_test.cpp  export_integration_test.cpp  export_unit_test.cpp  export_upload_tdd_test.cpp
src/cpp/code/tests/kano_git_gui_tests/: README.md
src/cpp/code/tests/kano_git_release_tests/: CMakeLists.txt  release_metadata_test.cpp
src/cpp/code/tests/kano_git_tui_tests/: CMakeLists.txt
src/cpp/kano-git-core/: CMakeLists.txt
src/cpp/kano-git-core/src/: command_registry.cpp  shell_executor.cpp
src/cpp/kano-git-core/src/commands/: BranchCmd.cpp  CloneCmd.cpp  CommitCmd.cpp  DoctorCmd.cpp  P4Cmd.cpp  PushCmd.cpp  ResolveCmd.cpp  ScalarCmd.cpp  SubmoduleCmd.cpp  SubtreeCmd.cpp  SvnCmd.cpp  SyncCmd.cpp  VersionCmd.cpp  WorkspaceCmd.cpp  WorktreeCmd.cpp
src/cpp/kano-git-core/src/modules/: KanoGit.CLI.cppm  KanoGit.CommandRegistry.hpp  KanoGit.Fmt.cppm  KanoGit.ShellExecutor.hpp
src/cpp/kog-cli/: CMakeLists.txt  main.cpp
src/cpp/scripts/common/: build_metadata.sh  coverage_report.sh  coverage_workflow.sh  docker_linux_build.sh  kano_cpp_test_skill.sh  llvm_json_to_cobertura.py  macos_remote_build.sh  measure_iteration_baseline.sh  package-reports-with-skill.sh  pgo_workflow.sh  private_repo_path.sh  render_junit_test_report.py  report_skill_adapter.sh  test_report.sh  unix_preset_build.sh  windows_preset_build.sh  windows_preset_helper.ps1
src/cpp/scripts/linux/: build_linux_ninja_clang_debug.sh  build_linux_ninja_clang_release.sh  build_linux_ninja_gcc_debug.sh  build_linux_ninja_gcc_release.sh  build_linux_ninja_gcc_tsan_debug.sh  coverage-report-llvm.sh  ninja-clang-coverage-build.sh  ninja-clang-coverage-report.sh  ninja-clang-coverage-run.sh  ninja-clang-debug.sh  ninja-clang-release.sh  ninja-gcc-debug.sh  ninja-gcc-release.sh  ninja-gcc-tsan-debug.sh  test-report.sh
src/cpp/scripts/macos/: build_macos_ninja_clang_arm64_debug.sh  build_macos_ninja_clang_arm64_release.sh  build_macos_ninja_clang_debug.sh  build_macos_ninja_clang_release.sh  build_macos_ninja_clang_x64_debug.sh  build_macos_ninja_clang_x64_release.sh  coverage-report-llvm-arm64.sh  coverage-report-llvm.sh  ninja-clang-arm64-coverage-build.sh  ninja-clang-arm64-coverage-report.sh  ninja-clang-arm64-coverage-run.sh  ninja-clang-arm64-debug.sh  ninja-clang-arm64-kano-report.sh  ninja-clang-arm64-release.sh  ninja-clang-coverage-build.sh  ninja-clang-coverage-report.sh  ninja-clang-coverage-run.sh  ninja-clang-debug.sh  ninja-clang-kano-report.sh  ninja-clang-pgo-collect-debug.sh  ninja-clang-pgo-use-release.sh  ninja-clang-release.sh  ninja-clang-x64-debug.sh  ninja-clang-x64-release.sh  remote-build.sh  test-report-arm64.sh  test-report.sh
src/cpp/scripts/orchestration/: matrix.sh  profile_matrix.sh
src/cpp/scripts/profiling/: common.sh  render_profile_report.py  report.sh  run.sh  run_matrix.py
src/cpp/scripts/profiling/matrices/: default.json  launchers.json  pgo.json  unity.json
src/cpp/scripts/self/: build.sh  rebuild.sh
src/cpp/scripts/stages/: build.sh  coverage-build.sh  coverage-gather.sh  coverage-report.sh  package-reports.sh  pgi-build.sh  pgo-build.sh  pgo-gather.sh  profile-report.sh  profile.sh  test-report.sh  test.sh
src/cpp/scripts/windows/: build_linux_ninja_clang_debug_via_docker.sh  build_linux_ninja_gcc_debug_via_docker.sh  build_linux_ninja_gcc_release_via_docker.sh  build_linux_ninja_gcc_tsan_debug_via_docker.sh  build_windows_fastbuild_msvc_release.sh  build_windows_msbuild_release.sh  build_windows_ninja_clang_debug.sh  build_windows_ninja_msvc_arm64_release.sh  build_windows_ninja_msvc_debug.sh  build_windows_ninja_msvc_release.sh  coverage-report-microsoft.sh  coverage-report-opencppcoverage.sh  fastbuild-msvc-release.sh  msbuild-debug.sh  msbuild-generate-sln.sh  msbuild-release.sh  ninja-clang-debug.sh  ninja-msvc-arm64-release.sh  ninja-msvc-coverage-build.sh  ninja-msvc-coverage-report.sh  ninja-msvc-coverage-run.sh  ninja-msvc-debug.sh  ninja-msvc-kano-opencppcoverage-report.sh  ninja-msvc-kano-report.sh  ninja-msvc-opencppcoverage-run.sh  ninja-msvc-release.sh  prerequisite_windows.sh  test-report.sh
src/cpp/scripts/workflows/: coverage-all.sh  pgo-rebuild.sh
src/cpp/systems/kano_git_core/: CMakeLists.txt
src/cpp/systems/kano_git_core/private/: command_registry.cpp
src/cpp/systems/kano_git_core/public/: command_registry.hpp  shell_executor.hpp
(+1205 files in other folders)
